# agent-interview

./: .env.example  .gitignore  AGENTS-zh-cn.md  AGENTS.md  CHANGELOG-zh-CN.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  MILESTONES.md  README.md  agent-interview-flow.md  docker-compose.yml  frontend-design.md  improvement-suggestions.md  test_hook.txt
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py  auth.py  rest_positions.py  rest_questions.py  rest_resume.py  rest_sessions.py  ws_interview.py
backend/app/core/: __init__.py  agent.py  conversation.py  evaluator.py  fsm.py  phase_router.py
backend/app/db/: __init__.py  database.py  seed.py
backend/app/llm/: __init__.py  base.py  claude.py  deepseek.py
backend/app/llm/prompts/: __init__.py  intent.py  interviewer.py  resume_parser.py  scoring.py  system.py
backend/app/models/: __init__.py  answer.py  job_position.py  question.py  question_bank.py  resume.py  session.py
backend/app/schemas/: __init__.py  evaluation.py  job_position.py  message.py  question.py  question_bank.py  resume.py  session.py
backend/app/services/: __init__.py  file_storage.py  gap_analyzer.py  question_bank.py  question_generator.py  report.py  resume_parser.py  strategy_generator.py
backend/data/: interview_templates.json  job_positions.json  questions_en.json  questions_zh.json
backend/tests/: conftest.py  test_agent.py  test_api.py  test_conversation.py  test_evaluator.py  test_fsm.py  test_question_bank.py  test_question_bank_api.py
(+52 files in other folders)
